--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     },
     "dependencies": {
         "antd": "^5.1.2",
+        "chart.js": "^4.1.1",
         "history": "^5.3.0",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
+        "react-chartkick": "^0.5.3",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
+        "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.6.1",
         "redux": "^4.2.0",
         "redux-promise-middleware": "^6.1.3",
