--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "chart.js": "^4.1.1",
         "history": "^5.3.0",
         "jwt-decode": "^3.1.2",
+        "query-string": "^8.1.0",
         "react": "^18.2.0",
         "react-chartkick": "^0.5.3",
         "react-dom": "^18.2.0",
