--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^18.2.0",
         "react-chartkick": "^0.5.3",
         "react-dom": "^18.2.0",
+        "react-google-map-picker": "^1.2.3",
         "react-redux": "^8.0.5",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.6.1",
