--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
+public/images/crash_reports/*
 public/storage
 public/hot
 storage/*.key
