--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/images/crash_reports/*
 public/storage
+/storage/*.docx
 public/hot
 storage/*.key
 .env
