--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "php-open-source-saver/jwt-auth": "^2.0"
+        "php-open-source-saver/jwt-auth": "^2.0",
+        "phpoffice/phpword": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
