--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "chart.js": "^4.1.1",
         "history": "^5.3.0",
         "jwt-decode": "^3.1.2",
+        "mapbox-gl": "^2.14.1",
         "moment": "^2.29.4",
         "query-string": "^8.1.0",
         "react": "^18.2.0",
         "react-chartkick": "^0.5.3",
         "react-dom": "^18.2.0",
         "react-google-map-picker": "^1.2.3",
+        "react-map-gl": "^7.0.23",
         "react-redux": "^8.0.5",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.6.1",
